# tapl

./: .clang-format  .gitignore  MODULE.bazel  README.md  WORKSPACE  ground-rules.md
.cursor/rules/: git-commit.mdc
.draft/: requirements.txt  sketch.py  sketch.txt  type_system.txt  why-theta-calculus.md  why-xi-calculus.md
.github/workflows/: pages.yml
doc/: Makefile  concept.md  faq.md  ground-rules.md  ground-rules.tex  setup.md  tapl-paper.md  theta-calculus.tex  xi-calculus.md
doc/adr/: 0001-record-architecture-decisions.md  0002-function-syntax.md
docs/: CNAME  _config.yml  concept.md  deep-dive.md  index.html  index.md
llvm/: .bazelrc  .clang-format  setup.md
llvm/src/: chunk.cc  main.cpp  syntax.cc  syntax.h
mvp/: pyproject.toml  tapl_lang.py
python/tapl-lang/: CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
python/tapl-lang/src/examples/: easy.py  easy.tapl  easy1.py  hello_world.py  hello_world.tapl  hello_world1.py  matrix.py  matrix.tapl  matrix1.py  pipe.py  pipe.tapl  pipe1.py  vector.py  vector1.py
python/tapl-lang/src/tapl_lang/: __about__.py  ast_util.py  chunk_dumper.py  chunker.py  codegen_setting.py  compiler.py  context.py  line_record.py  main.py  parser.py  parsertools.py  peg_parser.py  python_syntax.py  pythonlike_parser.py  pythonlike_syntax.py  scope.py  syntax.py  tapl_error.py  term.py  typelib.py  types.py
python/tapl-lang/src/tapl_lang/cli/: __init__.py  main.py  tapl.py
python/tapl-lang/src/tapl_lang/core/: README.md  api.py  attribute.py  aux_terms.py  chunk_dumper.py  chunker.py  compiler.py  context.py  language.py  line_record.py  parser.py  scope.py  syntax.py  tapl_error.py  typelib.py
python/tapl-lang/src/tapl_lang/lib/: api.py  aux_terms.py  builtin.py  builtin_types.py  codegen.py  compiler.py  dynamic_attribute.py  dynamic_attributes.py  expr.py  kinds.py  proxy.py  python_backend.py  python_terms.py  scope.py  stmt.py  tapl_dev.py  tapl_dev1.py  tapl_typing.py  terms.py  typed_terms.py  typelib.py  types.py  untyped_terms.py  utils.py
python/tapl-lang/src/tapl_lang/pythonlike/: builtin_functions.py  builtins.py  codegen.py  context.py  expr.py  grammar.py  language.py  parser.py  predef.py  predef1.py  rule_names.py  stmt.py  syntax.py  typing.py
python/tapl-lang/src/tapl_language/pipeweaver/: __init__.py  pipeweaver_language.py
python/tapl-lang/src/tapl_language/pythonlike/: __init__.py
python/tapl-lang/tests/: chunker_test.py  codegen_setting_test.py  line_record_test.py  parser_test.py  peg_parser_test.py  peg_test.py  pythonlike_parser_test.py  pythonlike_test.py  scope_test.py
python/tapl-lang/tests/core/: chunker_test.py  line_record_test.py  parser_test.py  scope_test.py
python/tapl-lang/tests/lib/: builtin_types_test.py  dynamic_attribute_test.py  proxy_test.py  scope_test.py  typelib_test.py  types_test.py
python/tapl-lang/tests/pythonlike/: expr_test.py  golden_test.py  grammar_test.py  rule_names_test.py  stmt_test.py
python/tapl-lang/tests/pythonlike/goldens/: collatz_conjecture.output  collatz_conjecture.py  collatz_conjecture.tapl  collatz_conjecture1.py  fibonacci.output  fibonacci.py  fibonacci.tapl  fibonacci1.py  function_error.output  function_error.tapl  function_error.wrap.py  function_error1.py  grammar.output  grammar.py  grammar.tapl  grammar1.py  importing.output  importing.py  importing.tapl  importing1.py  simple_class.output  simple_class.py  simple_class.tapl  simple_class1.py  simple_function.output  simple_function.py  simple_function.tapl  simple_function0.py  simple_function1.py  sum.output  sum.py  sum.tapl  sum1.py  type_constructions.output  type_constructions.py  type_constructions.tapl  type_constructions1.py
python/tapl-lang/tests/tapl_lang/core/: parser_test.py
python/tapl-lang/tests/tapl_lang/lib/: builtin_types_test.py  dynamic_attribute_test.py  python_backend_test.py  scope_test.py  typelib_test.py
python/tapl-lang/tests/tapl_lang/pythonlike/: expr_test.py  golden_test.py  grammar_test.py  rule_names_test.py  stmt_test.py
python/tapl-lang/tests/tapl_lang/pythonlike/goldens/: collatz_conjecture.output  collatz_conjecture.py  collatz_conjecture.tapl  collatz_conjecture1.py  concat.py  concat.tapl  concat1.py  fibonacci.py  fibonacci.tapl  fibonacci1.py  function_error.py  function_error1.py  grammar.output  grammar.py  grammar.tapl  grammar1.py  importing.py  importing.tapl  importing1.py  matrix.output  matrix.py  matrix.tapl  matrix1.py  name_collision.output  name_collision.py  name_collision.tapl  name_collision1.py  simple_class.output  simple_class.py  simple_class.tapl  simple_class1.py  simple_function.py  simple_function.tapl  simple_function1.py  sum.output  sum.py  sum.tapl  sum1.py  system_f.output  system_f.py  (+9 more)
python/tapl-lang/tests/tapl_language/pipeweaver/: pipeweaver_test.py
src/: BUILD  chunk.cc  chunk.h  chunk_test.cc  chunker.cc  chunker.h  chunker_test.cc  irnode.h  main.cpp  syntax.cc  syntax.h
