[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapl-lang"
dynamic = ["version"]
description = 'Tapl Language'
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0 WITH LLVM-exception"}
keywords = []
authors = [
  { name = "Orti Bazar", email = "orti.bazar@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Orti Bazar/tapl-lang#readme"
Issues = "https://github.com/Orti Bazar/tapl-lang/issues"
Source = "https://github.com/Orti Bazar/tapl-lang"

[tool.hatch.version]
path = "src/tapl_lang/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tapl_lang tests}"

[tool.coverage.run]
source_pkgs = ["tapl_lang", "tests"]
branch = true
parallel = true
omit = [
  "src/tapl_lang/__about__.py",
]

[tool.coverage.paths]
tapl_lang = ["src/tapl_lang", "*/tapl-lang/src/tapl_lang"]
tests = ["tests", "*/tapl-lang/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
